# TP_PYTHON_AKINATOR

./: README.md  app.py  base_de_donnees.json  pyproject.toml
static/css/: style.css
templates/: index.html  resultat.html
