[tool.poetry]
name = "akinator"
version = "0.1.0"
description = "Mydream"
authors = ["Le concombre masqué"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
flask = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
